<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andre487.sms487.activities.MainActivity">

    <EditText
        android:id="@+id/serverUrlInput"
        android:layout_width="284dp"
        android:layout_height="49dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/server_placeholder"
        android:inputType="textUri"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/serverKeyInput"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/server_key"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverUrlInput" />

    <Button
        android:id="@+id/serverUrlSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="saveServerUrl"
        android:text="@string/save_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/serverUrlInput"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/serverKeySave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:onClick="saveServerKey"
        android:text="@string/save_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/serverKeyInput"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/messagesField"
        android:layout_width="367dp"
        android:layout_height="393dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="12dp"
        android:editable="false"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/messages_label"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/renewMessages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverKeyInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/renewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="304dp"
        android:onClick="showMessagesFromDb"
        android:text="@string/renew_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
